--- a/sass/components/mobile/_examples.scss
+++ b/sass/components/mobile/_examples.scss
@@ -1,6 +1,8 @@
 .examples {
   padding-bottom: 94px;
-  padding-top: 94px;
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
   .title {
     margin-bottom: 50px;
     margin-top: 0;
@@ -9,6 +11,9 @@
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.03em;
+  }
+  @media screen and (max-width: 1199px) {
+    display: none;
   }
 }
 .examples-list {
