--- a/sass/components/mobile/_logo.scss
+++ b/sass/components/mobile/_logo.scss
@@ -1,11 +1,14 @@
 .logo {
-  color: var(--primary-text-color);
+  color: $primary-text-color;
   font-family: $secondary-font, cursive;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   letter-spacing: 0.03em;
   text-decoration: none;
   span {
     color: $accent-color;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
   }
 }
