--- a/sass/components/mobile/_modal.scss
+++ b/sass/components/mobile/_modal.scss
@@ -1,11 +1,28 @@
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 1;
+  transition: opacity 250ms linear;
+  z-index: 1;
+  &.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
+  &.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.5);
+  }
+}
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 528px;
-  max-width: 100%;
-  height: 581px;
-  max-height: 100%;
+  width: calc(100vw - 30px);
+  max-width: 450px;
+  min-height: 609px;
   overflow: auto;
   background-color: #fff;
   transform: translate(-50%, -50%) scale(1);
@@ -13,6 +30,12 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    max-width: 528px;
+    min-height: 581px;
+    height: 581px;
+  }
   &-relative {
     position: relative;
   }
@@ -23,7 +46,7 @@
     position: absolute;
     padding: 0;
     margin: 0;
-    margin-left: 490px;
+    margin-left: calc(100% - 38px);
     margin-top: 8px;
     width: 30px;
     height: 30px;
