--- a/sass/components/mobile/_page-footer.scss
+++ b/sass/components/mobile/_page-footer.scss
@@ -2,15 +2,45 @@
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
-  .title {
+  .footer-flex {
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      justify-content: flex-start;
+    }
+  }
+  .logo {
     color: #fff;
-    margin-bottom: 20px;
-    margin-top: 0;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
+    @media screen and (min-width: 1200px) {
+    }
+    @media screen and (min-width: 1200px) {
+    }
+  }
+  .left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    @media screen and (min-width: 768px) {
+      margin-right: 165px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-right: 70px;
+      align-items: flex-start;
+      justify-content: flex-start;
+    }
+  }
+  .footer-list {
+    @media screen and (max-width: 1199px) {
+      text-align: center;
+    }
+  }
+  .footer-list li:not(:last-child) {
+    margin-bottom: 9px;
   }
   .address {
     margin-top: 20px;
@@ -30,24 +60,32 @@
     letter-spacing: 0.03em;
     text-decoration: none;
   }
-  .logo {
-    color: #fff;
+  .second {
+    margin-top: 60px;
+    @media screen and (min-width: 768px) {
+      margin-top: 5px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-top: 12px;
+    }
   }
+  .title {
+    color: #fff;
+    margin-bottom: 20px;
+    margin-top: 0;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    @media screen and (max-width: 1199px) {
+      text-align: center;
+    }
+  }
+
   .button-icon {
     fill: #fff;
   }
-}
-.footer-flex {
-  display: flex;
-}
-
-.footer-list li:not(:last-child) {
-  margin-bottom: 9px;
-}
-
-.second {
-  margin-left: 70px;
-  margin-top: 12px;
 }
 
 .footer-actions {
@@ -75,10 +113,8 @@
   }
 }
 .third {
-  margin-left: 93px;
-  margin-top: 12px;
   .footer-input {
-    width: 358px;
+    width: 100%;
     height: 50px;
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -97,6 +133,22 @@
       letter-spacing: 0.03em;
       color: rgba(255, 255, 255, 0.6);
     }
+    @media screen and (min-width: 768px) {
+      width: 450px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 358px;
+    }
+  }
+  @media screen and (max-width: 1199px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 60px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: 12px;
+    margin-left: 93px;
   }
 }
 
@@ -106,7 +158,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: 0;
-  margin-left: 12px;
+
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:focus,
@@ -132,11 +184,22 @@
       color: #fff;
     }
   }
+  @media screen and (max-width: 767px) {
+    margin-top: 20px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-top: 20px;
+    margin-left: 12px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 0;
+  }
 }
 
 .icon-send {
   width: 24px;
   height: 24px;
   background-size: contain;
-  background-image: url('../img/icon-send.svg');
+  background-image: url("../img/icon-send.svg");
 }
