--- a/sass/components/mobile/_portfolio-buttons.scss
+++ b/sass/components/mobile/_portfolio-buttons.scss
@@ -1,12 +1,17 @@
 .portfolio-section {
-  padding-top: 100px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 100px;
+    padding-bottom: 94px;
+  }
 }
 .portfolio-buttons {
   display: flex;
-  justify-content: center;
-  margin-bottom: 56px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
   .button {
+    margin-bottom: 15px;
     font-family: Roboto;
     padding: 6px 22px;
     margin-right: 8px;
@@ -30,5 +35,14 @@
     background-color: $accent-color;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+  @media screen and (min-width: 667px) {
+    justify-content: center;
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
   }
 }
