--- a/sass/components/mobile/_portfolio-list.scss
+++ b/sass/components/mobile/_portfolio-list.scss
@@ -1,6 +1,8 @@
 .portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
   .title {
     margin-top: 20px;
     margin-right: 24px;
@@ -10,8 +12,8 @@
     font-weight: bold;
     font-size: 18px;
     line-height: 2;
-    /* identical to box height, or 200% */
     letter-spacing: 0.06em;
+    z-index: 998;
   }
   .name {
     margin-bottom: 20px;
@@ -22,43 +24,61 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 1.87;
-    /* identical to box height, or 187% */
     letter-spacing: 0.03em;
+    z-index: 998;
   }
   .list-el {
-    width: calc((100% - 60px) / 3);
-    margin-right: 30px;
+    width: 100%;
     border: 1px solid #eeeeee;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: calc((100% - 30px) / 2);
+      &:not(:nth-last-child(-n + 1)) {
+        margin-bottom: 30px;
+      }
+      &:nth-child(2n-1) {
+        margin-right: 30px;
+      }
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc((100% - 60px) / 3);
+      &:not(:nth-child(3n)) {
+        margin-right: 30px;
+      }
+      &:not(:nth-last-child(-n + 3)) {
+        margin-bottom: 30px;
+      }
+      &:nth-last-child(-n + 3) {
+        margin-bottom: 0;
+      }
+    }
+    img {
+      width: 100%;
+      height: auto;
+    }
   }
   .list-el:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
-  .list-el:nth-child(3n) {
-    margin-right: 0px;
-  }
-  .list-el:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 30px;
-  }
-  .list-el:nth-last-child(-n + 3) {
-    margin-bottom: 0;
-  }
   .portfolio-decoration {
     position: relative;
     overflow: hidden;
-    width: 368px;
-    height: 294px;
+    width: 100%;
+    z-index: 2;
   }
   .decoration-text {
-    content: '';
+    content: "";
     position: absolute;
     display: flex;
     align-items: center;
     padding-left: 24px;
     padding-right: 24px;
-    width: 370px;
-    height: 297px;
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
     font-weight: 400;
@@ -67,7 +87,7 @@
     letter-spacing: 0.03em;
     color: #fff;
     background-color: rgba(33, 150, 243, 0.9);
-    transform: translateY(500px);
+    transform: translateY(102%);
     transition-property: transform;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
