--- a/sass/utils/_utils.scss
+++ b/sass/utils/_utils.scss
@@ -7,7 +7,7 @@ body {
   font-family: Roboto, sans-serif;
   text-decoration: none;
   background-color: #fff;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
 }
 a {
   text-decoration: none;
