--- a/sass/components/mobile/_portfolio-list.scss
+++ b/sass/components/mobile/_portfolio-list.scss
@@ -1,5 +1,5 @@
 .portfolio-list {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 480px) {
     display: flex;
     flex-wrap: wrap;
   }
@@ -34,7 +34,7 @@
     &:not(:last-child) {
       margin-bottom: 30px;
     }
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
+    @media screen and (min-width: 480px) and (max-width: 1199px) {
       width: calc((100% - 30px) / 2);
       &:not(:nth-last-child(-n + 1)) {
         margin-bottom: 30px;
@@ -82,7 +82,7 @@
     top: 0;
     left: 0;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 1.56;
     letter-spacing: 0.03em;
     color: #fff;
@@ -92,6 +92,15 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     border-radius: 2px;
+    @media screen and (min-width: 380px) {
+      font-size: 18px;
+    }
+    @media screen and (min-width: 480px) and (max-width: 580px) {
+      font-size: 12px;
+    }
+    @media screen and (min-width: 580px) and (max-width: 680px) {
+      font-size: 14px;
+    }
   }
   & .list-el:hover .decoration-text {
     transform: translateY(0);
