--- a/css/main.css
+++ b/css/main.css
@@ -1198,6 +1198,18 @@ a {
   margin-bottom: 30px;
 }
 
+@media screen and (min-width: 480px) {
+  .features-list .item {
+    width: calc((100% - 30px) / 2);
+  }
+  .features-list .item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+  .features-list .item:nth-last-child(n + 3) {
+    margin-bottom: 30px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .features-list .item {
     width: 354px;
@@ -1228,7 +1240,7 @@ a {
   text-transform: uppercase;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 479px) {
   .features-list .title {
     text-align: center;
   }
@@ -1247,6 +1259,16 @@ a {
 @media screen and (min-width: 1200px) {
   .features-list .text {
     margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .features-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 }
 
@@ -1361,20 +1383,6 @@ a {
   }
 }
 
-.team-item {
-  background-color: white;
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  text-align: center;
-}
-
-@media screen and (min-width: 1200px) {
-  .team-item:not(:last-child) {
-    margin-right: 30px;
-  }
-}
-
 .team-image {
   margin-bottom: 30px;
   width: 100%;
@@ -1382,10 +1390,27 @@ a {
 }
 
 .team-list .team-item {
+  background-color: white;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  text-align: center;
   padding-bottom: 24px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .team-list .team-item {
+    width: calc((100% - 30px) / 2);
+  }
+  .team-list .team-item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+  .team-list .team-item:nth-last-child(n + 3) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 479px) {
   .team-list .team-item:not(:last-child) {
     margin-bottom: 30px;
   }
@@ -1409,6 +1434,12 @@ a {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .team-list .team-item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
 .team-list .name {
   margin-bottom: 10px;
   margin-top: 0;
@@ -1429,6 +1460,16 @@ a {
   line-height: 19px;
   /* identical to box height */
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 480px) {
+  .team-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1492,6 +1533,13 @@ a {
   background-color: #2196f3;
 }
 
+@media screen and (min-width: 480px) and (max-width: 495px) {
+  .actions .button {
+    width: 40px;
+    height: 40px;
+  }
+}
+
 .button-icon {
   width: 20px;
   height: 20px;
@@ -1504,6 +1552,12 @@ a {
 .button:hover .button-icon,
 .button-icon .button:focus {
   fill: #fff;
+}
+
+@media screen and (min-width: 480px) and (max-width: 495px) {
+  .button-icon {
+    margin: 10px;
+  }
 }
 
 .clients {
@@ -1553,7 +1607,7 @@ a {
   height: 90px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 479px) {
   .clients .clients-item {
     width: calc((100% - 30px) / 2);
     max-width: 210px;
@@ -1562,6 +1616,18 @@ a {
     margin-bottom: 30px;
   }
   .clients .clients-item:nth-child(2n-1) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .clients .clients-item {
+    width: calc((100% - 60px) / 3);
+  }
+  .clients .clients-item:nth-last-child(n + 4) {
+    margin-bottom: 30px;
+  }
+  .clients .clients-item:not(:nth-child(3n)) {
     margin-right: 30px;
   }
 }
@@ -2033,7 +2099,7 @@ a {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 480px) {
   .portfolio-list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -2082,7 +2148,7 @@ a {
   margin-bottom: 30px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .portfolio-list .list-el {
     width: calc((100% - 30px) / 2);
   }
@@ -2142,7 +2208,7 @@ a {
   top: 0;
   left: 0;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: #fff;
@@ -2158,6 +2224,24 @@ a {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 2px;
+}
+
+@media screen and (min-width: 380px) {
+  .portfolio-list .decoration-text {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 580px) {
+  .portfolio-list .decoration-text {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 580px) and (max-width: 680px) {
+  .portfolio-list .decoration-text {
+    font-size: 14px;
+  }
 }
 
 .portfolio-list .list-el:hover .decoration-text {
