--- a/sass/components/mobile/_clients.scss
+++ b/sass/components/mobile/_clients.scss
@@ -34,7 +34,7 @@
   }
   .clients-item {
     height: 90px;
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 479px) {
       width: calc((100% - 30px) / 2);
       max-width: 210px;
       &:nth-last-child(n + 3) {
@@ -44,6 +44,16 @@
         margin-right: 30px;
       }
     }
+    @media screen and (min-width: 480px) and (max-width: 767px) {
+      width: calc((100% - 60px) / 3);
+      &:nth-last-child(n + 4) {
+        margin-bottom: 30px;
+      }
+      &:not(:nth-child(3n)) {
+        margin-right: 30px;
+      }
+    }
+
     @media screen and (min-width: 768px) and (max-width: 1199px) {
       width: calc((100% - 60px) / 3);
       &:not(:nth-child(3n)) {
