--- a/sass/components/mobile/_features.scss
+++ b/sass/components/mobile/_features.scss
@@ -28,6 +28,17 @@
 .features-list {
   .item {
     margin-bottom: 30px;
+    @media screen and (min-width: 480px) {
+      & {
+        width: calc((100% - 30px) / 2);
+      }
+      &:not(:nth-child(2n)) {
+        margin-right: 30px;
+      }
+      &:nth-last-child(n + 3) {
+        margin-bottom: 30px;
+      }
+    }
     @media screen and (min-width: 768px) {
       & {
         width: 354px;
@@ -54,7 +65,7 @@
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 479px) {
       text-align: center;
     }
   }
@@ -70,6 +81,10 @@
     @media screen and (min-width: 1200px) {
       margin-bottom: 0;
     }
+  }
+  @media screen and (min-width: 480px) {
+    display: flex;
+    flex-wrap: wrap;
   }
   @media screen and (min-width: 768px) {
     display: flex;
