--- a/sass/components/mobile/_team.scss
+++ b/sass/components/mobile/_team.scss
@@ -23,19 +23,7 @@
     padding-bottom: 94px;
   }
 }
-.team-item {
-  background-color: white;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  text-align: center;
 
-  @media screen and (min-width: 1200px) {
-    &:not(:last-child) {
-      margin-right: 30px;
-    }
-  }
-}
 .team-image {
   margin-bottom: 30px;
   width: 100%;
@@ -43,8 +31,22 @@
 }
 .team-list {
   .team-item {
+    background-color: white;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    text-align: center;
     padding-bottom: 24px;
-    @media screen and (max-width: 767px) {
+    @media screen and (min-width: 480px) and (max-width: 1199px) {
+      width: calc((100% - 30px) / 2);
+      &:not(:nth-child(2n)) {
+        margin-right: 30px;
+      }
+      &:nth-last-child(n + 3) {
+        margin-bottom: 30px;
+      }
+    }
+    @media screen and (max-width: 479px) {
       &:not(:last-child) {
         margin-bottom: 30px;
       }
@@ -60,6 +62,11 @@
     }
     @media screen and (min-width: 1200px) {
       padding-bottom: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      &:not(:last-child) {
+        margin-right: 30px;
+      }
     }
   }
   .name {
@@ -81,6 +88,10 @@
     line-height: 19px;
     /* identical to box height */
     letter-spacing: 0.03em;
+  }
+  @media screen and (min-width: 480px) {
+    display: flex;
+    flex-wrap: wrap;
   }
   @media screen and (min-width: 768px) {
     display: flex;
@@ -118,6 +129,10 @@
   &:focus {
     background-color: $accent-color;
   }
+  @media screen and (min-width: 480px) and (max-width: 495px) {
+    width: 40px;
+    height: 40px;
+  }
 }
 .button-icon {
   width: 20px;
@@ -128,5 +143,8 @@
   .button:hover &,
   .button:focus {
     fill: $white;
+  }
+  @media screen and (min-width: 480px) and (max-width: 495px) {
+    margin: 10px;
   }
 }
