--- a/css/main.css
+++ b/css/main.css
@@ -746,7 +746,7 @@ a {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .hero {
     padding: 118px 204px 0 204px;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../img/tablet-hero.jpg");
@@ -754,7 +754,7 @@ a {
   }
 }
 
-@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) and (max-width: 1199px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 2dppx) {
   .hero .box {
     background-image: url("../img/tablet-hero-x2.jpg");
   }
@@ -861,7 +861,6 @@ a {
   width: calc(100vw - 30px);
   max-width: 450px;
   min-height: 609px;
-  overflow: auto;
   background-color: #fff;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
@@ -878,8 +877,7 @@ a {
   .modal {
     width: 528px;
     max-width: 528px;
-    min-height: 581px;
-    height: 581px;
+    height: 617px;
   }
 }
 
